# oq-gem-taxonomy-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-to-pypi.yaml  test-package.yml  test.yml
helpers/: abs_readme.sh
openquake/: __init__.py
openquake/gem_taxonomy_data/: __init__.py  classes.py  version.py
openquake/gem_taxonomy_data/data/: taxonomy3.3_standard.json  taxonomy4.0_standard.json
